--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
                 <section id="work">
 
 
-                    <h3 class="headline scroll-animated-from-right">Hey wanna Know me.</h3>
+                   <h3 class="headline scroll-animated-from-right">Hey wanna Know me.</h3></br>
+                    <h3 class="headline scroll-animated-from-right">Click Me.</h3>
                     
                     
                     <!-- SHOWCASE -->
